@@ -5787,3 +5787,14 @@ Set sanlm flag in cg_vbm_defaults again to "3".
 
 ------------------------------------------------------------------------
 r638 | gaser | 2014-10-23 11:49:45
+
+M       CHANGES.txt
+M       cg_vbm_run_newcatch.m
+M       cg_vbm_write.m
+M       vbm_vol_atlas.m
+
+(1)  Corrected report error in cg_vbm_write.
+(2)  Corrected error handling in cg_vbm_run_newcatch. 
+(3)  Prepared further atlas data and xml export in vbm_vol_atlas (not read yet).
+------------------------------------------------------------------------
+r639 | dahnke | 2014-10-23 12:03:49
